--- a/index.html
+++ b/index.html
@@ -1,9 +1,66 @@
-NPM Clone Nifty Penguin Magic npm Enterprise Products Solutions Resources Docs Support Search Join Log In Build amazing
-things Essential JavaScript development tools that help you go to market faster and build powerful applications using
-modern open source code. See plans Join for free Bring the best of open source to your company npm is the tool used by
-over 11,000,000 JavaScript developers around the world. Your developers already use it. Your company depends on it.
-Create an Org and get more out of the tools your team already knows and loves. Zero configuration Create an org, add
-your team, and start collaborating. Nothing to configure, set up, or manage. Team management Control who has access to
-what modules within your team namespace using straightforward team management capabilities. Familiar features npm Orgs
-has 100% parity with all the public npm registry features your developers already use. npm audit Enjoy the security
-auditing features built into the npm client, a zero-friction way to make open source software safer. Create an Org
+<header>
+    <div>
+      <div>
+        <img class="blackHeart" src="black-heart.png" alt="black heart" />
+        <span> Nifty Penguin Magic </span>
+      </div>
+      <nav>
+        <ul>
+          <li><a href="#"> npm Enterprise </a></li>
+          <li><a href="#"> Products </a></li>
+          <li><a href="#"> Solutions </a></li>
+          <li><a href="#"> Resources </a></li>
+          <li><a href="#"> Docs </a></li>
+          <li><a href="#"> Support </a></li>
+        </ul>
+      </nav>
+    </div>
+  
+    <div>
+      <img  class="logo" src="npm-logo.png" alt="npm logo"/>
+      <form class="search">
+        <input type="text" name="search" placeholder="Search for packages">
+      </form>
+      <a class="link-btn" href="#">Join</a>
+      <a class="link-btn" href="#">Login</a>
+    </div>
+  </header>
+  <section id="top">
+    <h1>Build amazing things</h1>
+    <p>Essential JavaScript development tools that help you go to market faster and build powerful applications using modern open source code.</p>
+     <a class="cover-box" href="#">See plans</a>
+     <a class="cover-box-2" href="#">Join for free</a>
+  </section>
+  <section id="middle">
+    <img class="triangleHexagon" src="triangle-hexagon.svg" alt="triangle hexagon"/>
+    <h3>Bring the best open source to your company</h3>
+    <p>npm is the tool used by othver 11.000.000 JavaScript developers around the world. Your developers already use it. Your company depends on it. Create an Org and get more out of the tools your team already knows and loves.</p>
+  </section>
+  <section id="bottom">
+    <div>
+      <img class="icon" src="zero-configuration.svg" alt="zero configuration icon"/>
+        <span>Zero configuration</span>
+        <p>Create an org. add your teamn, and start collaborating. Nothing to configure, set up, or manage.</p>
+    </div>
+    <div>
+      <img class="icon" src="team-management.svg" alt="team management icon"/>
+        <span>Team management</span>
+        <p>Control who has acces to what modules within your team namespace using straightforward team management capabilities</p>
+    </div>
+    <div>
+      <img class="icon" src="familiar-features.svg" alt="familiar features icon"/>
+        <span>Familiar features</span>
+        <p>npm Orgs has 100% parity with all the public npm registry features your developers already use.</p>
+    </div>
+    <div>
+      <img class="icon" src="npm-audit.svg" alt="npm audit icon"/>
+        <span>npm audit</span>
+        <p>Enjoy the security auditing features built into the npm client, a zero-friction way to make open source software safer.</p>
+    </div>
+    <div><a class="orgBtn" href="#">Create an Org</a>
+    </div>
+
+  </section>
+  <footer></footer>
+    
+  
